syntax = "proto3";

package api.videoApi.service.v1;

option go_package = "lehu-video/api/videoApi/service/v1;v1";
option java_multiple_files = true;
option java_package = "api.videoApi.service.v1";
import "google/api/annotations.proto";

message User {
	int64 id = 1; // 用户id
	string name = 2; // 用户名称
	string avatar = 3; // 用户头像Url
	string background_image = 4; // 用户个人页顶部大图
	string signature = 5; // 个人简介
	string mobile = 6; // 手机号
	string email = 7; // 邮箱
	int64 follow_count = 8; // 关注总数
	int64 follower_count = 9; // 粉丝总数
	int64 total_favorited = 10; // 获赞数量
	int64 work_count = 11; // 作品数量
	int64 favorite_count = 12; // 点赞数量
}


service UserService {
	// 获取验证码
	rpc GetVerificationCode(GetVerificationCodeReq) returns (GetVerificationCodeResp){
		option (google.api.http) = {
			post:"/v1/user/code"
			body:"*"
		};
	};

	// 注册
	rpc Register(RegisterReq) returns(RegisterResp){
		option(google.api.http) = {
			post:"/v1/user/register"
			body:"*"
		};
	};

	// 登录
	rpc Login(LoginReq) returns(LoginResp){
		option (google.api.http) = {
			post:"/v1/user/login"
			body:"*"
		};
	};

	// 获取用户信息
	rpc GetUserInfo(GetUserInfoReq) returns (GetUserInfoResp) {
		option (google.api.http) = {
			get: "/user/info"
		};
	};

	// 更新用户信息
	rpc UpdateUserInfo(UpdateUserInfoReq) returns (UpdateUserInfoResp) {
		option (google.api.http) = {
			put: "/user/info"
			body: "*"
		};
	};


	rpc BindUserVoucher(BindUserVoucherReq) returns (BindUserVoucherResp) {
		option (google.api.http) = {
			post: "/user/voucher"
			body: "*"
		};
	};

	rpc UnbindUserVoucher(UnbindUserVoucherReq) returns (UnbindUserVoucherResp) {
		option (google.api.http) = {
			delete: "/user/voucher"
		};
	};
}

message GetVerificationCodeReq{
	string mobile = 1;
	string email = 2;
}

message GetVerificationCodeResp{
	int64 code_id = 1;
}

message RegisterReq{
	string mobile = 1;
	string email = 2;
	string password = 3;
	int64 code_id = 4;
	string code = 5;
}

message RegisterResp {
	int64 user_id = 1;
}


message LoginReq {
	string mobile = 1 ;
	string email = 2 ;
	string password = 3 ;
}

message LoginResp {
	string token = 1;
	User user = 2;
}

message GetUserInfoReq {
	int64 user_id = 1;
}

message GetUserInfoResp {
	User user = 2;
}




message UpdateUserInfoReq {
	int64 user_id = 1 ;
	string name = 2;
	string avatar = 3;
	string background_image = 4;
	string signature = 5;
}

message UpdateUserInfoResp {
}


enum VoucherType {
	PHONE = 0;
	EMAIL = 1;
}

message BindUserVoucherReq {
	VoucherType voucher_type = 1;
	string voucher = 2;
}

message BindUserVoucherResp {
}

message UnbindUserVoucherReq {
	VoucherType voucher_type = 1;
	string voucher = 2;
}

message UnbindUserVoucherResp {
}